Experience-Features-Section Uploaded

--- a/index.html
+++ b/index.html
@@ -62,7 +62,42 @@
                     <button>Explore More</button>
                 </div>
             </section>
+
+            <!-- Experience Features Section Start-->
+            <section class="experience-features">
+                <div class="experience-features-content">
+                     <h1><hr>Features you will <br> love & enjoy</h1>
+                    <p>We have a variety of features here. Some of the popular features are discussed in detail here. We have more than 10 years of working experience.</p>
+
+                    <div class="experience-content-box">
+                        <h2>Desktop & Mobile Version</h2>
+                        <p>Our developers create any website, application for desktop and mobile version very efficiently. They have been working with us efficiently for a long time...</p>
+                    </div>
+
+                    <div class="experience-content-box">
+                        <h2>Drag & Drop Builder</h2>
+                        <p>Our developers create any website, application for desktop and mobile version very efficiently. They have been working with us efficiently for a long time...</p>
+                    </div>
+
+                    <div class="experience-content-box">
+                        <h2>Awesome Modern Design</h2>
+                        <p>Our developers create any website, application for desktop and mobile version very efficiently. They have been working with us efficiently for a long time...</p>
+                    </div>
+
+                    <div class="experience-content-box">
+                        <h2>Super Easy to Edit</h2>
+                        <p>Our developers create any website, application for desktop and mobile version very efficiently. They have been working with us efficiently for a long time...</p>
+                    </div>
+
+                </div>
+                <div class="experience-features-image">
+                    <img src="images/architect.png" alt="Architect Image">
+                    <a class="experience-btn">10+ Year <br> <span>Experience</span></a>
+                </div>
+            </section>  
         </div>
+
+        
     </main>
 
     <!-- Footer Section Start Here-->
