Subscription Section Uploaded

--- a/index.html
+++ b/index.html
@@ -144,6 +144,15 @@
             </section>
         </div>
 
+        <section class="subscription">
+            <div id="container">
+                <div class="subscribe-box">
+                    <h1>For More Information <br> Please Subscription Our Page</h1>
+                    <input type="text" name="" id="" placeholder="Your Email Address Here...">
+                    <button class="subs-btn">Subscribe</button>
+                </div>
+            </div>
+        </section>
         
     </main>
 
