Footer Section Uploaded

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <!-- Footer Section Start Here-->
 
     <footer>
-
+        <p>All rights reserved copyright@2023 | Lorens Bappy Mondal</p>
     </footer>
 </body>
 </html>
